# hearsay

./: .gitignore  CLAUDE.md  LICENSE  README.md  RELEASE.md  fix-permissions.sh  hangup-diagnosis.md  package-lock.json  project.yml  run-dev.sh  run.sh  setup-cert.sh
Hearsay/: AppDelegate.swift  Constants.swift  Hearsay.entitlements  Info.plist
Hearsay/Cleanup/: CleanupModelDownloader.swift  CleanupSettings.swift  TextCleaner.swift  TextCleanupManager.swift  TranscriptProcessing.swift
Hearsay/Core/: AudioRecorder.swift  AudioSplitter.swift  ClipboardManager.swift  HotkeyMonitor.swift  MicrophoneManager.swift  PermissionsManager.swift  ScreenshotManager.swift  (+7 more)
HearsayCLI/: main.swift
HearsayTests/: CleanupSettingsTests.swift  ModelDownloaderTests.swift  SpeechTranscribingTests.swift  TextCleanerTests.swift
eval/: README.md  eval.sh  prompt.txt
finetune/: .gitignore  Justfile  README.md  eval.py  eval_regression.py  export_gguf.py  import_history.py  pyproject.toml  results.json  train_modal.py
finetune/configs/: sft.yaml
finetune/data/: generated.jsonl  test_gen.jsonl
finetune/dataset/: generate_data.py  prepare_data.py  schema.py  validate_schema.py
finetune/evals/: hist_000.txt  hist_001.txt  hist_002.txt  hist_003.txt  hist_004.txt  hist_005.txt  hist_006.txt  hist_007.txt  hist_008.txt  hist_009.txt  hist_010.txt  hist_011.txt  hist_012.txt  hist_013.txt  hist_014.txt  hist_015.txt  hist_016.txt  hist_017.txt  hist_018.txt  hist_019.txt  hist_020.txt  hist_021.txt  hist_022.txt  hist_023.txt  hist_024.txt
scripts/: fix_icon.py  release.sh
(+21 files in other folders)
